--- a/www/index.html
+++ b/www/index.html
@@ -423,7 +423,7 @@
         <div class="row">
             <div class="center-text col s12">
                 <button data-target="modal3" class=" btn modal-trigger waves-effect waves-light btn light-blue lighten-2 " ng-click="createLineGraph()"> Create </button>
-                <button class="waves-effect waves-light btn light-blue lighten-2 "> Back </button>
+                <button class="waves-effect waves-light btn light-blue lighten-2 " id="lineBack"> Back </button>
             </div>
         </div>
         <div id="modal3" class="modal">
