--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.2.0/lodash.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/contour.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <title>StatSticks</title>
 </head>
 
